# cppcheck

./: CMakeLists.txt  Makefile
cli/: CMakeLists.txt  cmdlineparser.cpp
cmake/modules/: CPPCHECKUtilities.cmake  FindDumpbin.cmake  FindPCRE.cmake
gui/: CMakeLists.txt  applicationlist.cpp  codeeditor.cpp  codeeditor.h  gui.pro  main.ui  mainwindow.cpp  resultstree.cpp  resultstree.h  resultsview.cpp  resultsview.h  translationhandler.cpp  translationhandler.h
lib/: CMakeLists.txt  CPPCHECKConfig.cmake  CPPCHECKConfig.cmake.in  DLLVisibility.h  LIBCPPCHECKConfig.cmake.in  check.cpp  check.h  checkautovariables.cpp  checkbufferoverrun.cpp  checkclass.cpp  checkexceptionsafety.cpp  checkmemoryleak.cpp  checkmemoryleak.h  checknullpointer.cpp  checkobsoletefunctions.cpp  checkother.cpp  checkpostfixoperator.cpp  checkstl.cpp  checkuninitvar.cpp  checkunusedfunctions.h  cppcheck.cpp  cppcheck.h  errorlogger.h  generateStaticLinkFlags.cmake  lib.pri  library_sources.cmake  path.h  registerchecks.cpp  registerchecks.h  settings.h
test/: CMakeLists.txt  testcppcheck.cpp  testfilelister.cpp
